--- a/views/username.erb
+++ b/views/username.erb
@@ -1,6 +1,6 @@
 <h2> Please enter your name <h2>
 
-<form action="/bet" method="post">
+<form action="/game" method="post">
 <input type="text" name="name"/>
 <input type="submit" value="submit" class="btn"/>
 </form>
